3558.	[bug]		IXFR of a DLZ stored zone was broken. [RT #33331]

3557.	[bug]		Reloading redirect zones was broken. [RT #33292]

3556.	[maint]		Added AAAA for D.ROOT-SERVERS.NET.

3555.	[bug]		Address theoretical race conditions in acache.c
			(change #3553 was incomplete). [RT #33252]

3553.	[bug]		Address suspected double free in acache. [RT #33252]

3552.	[bug]		Wrong getopt option string for 'nsupdate -r'.
			[RT #33280]

3549.	[doc]		Documentation for "request-nsid" was missing.
			[RT #33153]

3548.	[bug]		The NSID request code in resolver.c was broken
			resulting in invalid EDNS options being sent.
			[RT #33153]

3547.	[bug]		Some malformed unknown rdata records were not properly
			detected and rejected. [RT #33129]

	--- 9.9.3rc1 released ---

3546.	[func]		Add EUI48 and EUI64 types. [RT #33082]

3544.	[contrib]	check5011.pl: Script to report the status of
			managed keys as recorded in managed-keys.bind.
			Contributed by Tony Finch <dot@dotat.at>

3543.	[bug]		Update socket stucture before attaching to socket
			manager after accept. [RT #33084]

3541.	[bug]		Parts of libdns were not properly initialized when
			built in libexport mode. [RT #33028]

3540.	[test]		libt_api: t_info and t_assert were not thread safe.

3539.	[port]		win32: timestamp format didn't match other platforms.

3538.	[test]		Running "make test" now requires loopback interfaces
			to be set up. [RT #32452]

3537.	[tuning]	Slave zones, when updated, now send NOTIFY messages
			to peers before being dumped to disk rather than
			after. [RT #27242]

3535.	[bug]		Minor win32 cleanups. [RT #32962]

3534.	[bug]		Extra text after an embedded NULL was ignored when
			parsing zone files. [RT #32699]

3533.	[contrib]	query-loc-0.4.0: memory leaks. [RT #32960]

3532.	[contrib]	zkt: fixed buffer overrun, resource leaks. [RT #32960]

3531.	[bug]		win32: A uninitialized value could be returned on out
			of memory. [RT #32960]

3530.	[contrib]	Better RTT tracking in queryperf. [RT #30128]
