@@ -63,7 +63,7 @@ SUBDIRS="acl additional allow_query addzone autosign builtin
          formerr forward glue gost ixfr inline limits logfileconfig
          lwresd masterfile masterformat metadata notify nsupdate pending
 	 pkcs11 redirect resolver rndc rpz rrsetorder rsabigexponent
-	 sortlist smartsign staticstub stub tkey tsig tsiggss unknown
+	 smartsign sortlist spf staticstub stub tkey tsig tsiggss unknown
 	 upforwd verify views wildcard xfer xferquota zonechecks"
 
 # PERL will be an empty string if no perl interpreter was found.
