@@ -1,0 +1,2 @@
+rm -f ns1/named.run
+rm -f ns1/named.memstats
